--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,13 @@
+.bsp/*
+.DS_Store
+.java-version
+.idea/*
+.metals/*
+.vscode/*
 *.class
 *.log
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+**/*.iml
+bin/*
 hs_err_pid*
+out/*
+target/*
