--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -33,5 +33,5 @@ jobs:
       - name: Create Code Coverage Report
         if: matrix.java-version == '11'
         run: |
-          ./mill --no-server --disable-ticker ${{ matrix.suite }}.scoverage.htmllsReport
+          ./mill --no-server --disable-ticker ${{ matrix.suite }}.scoverage.htmlReport
       # TODO: build an HTML report and upload as an artifact
