--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -34,4 +34,9 @@ jobs:
         if: matrix.java-version == '11'
         run: |
           ./mill --no-server --disable-ticker ${{ matrix.suite }}.scoverage.htmlReport
-      # TODO: build an HTML report and upload as an artifact
+      - name: Upload Code Coverage Report
+        uses: actions/upload-artifact@v4
+        if: matrix.java-version == '11'
+        with:
+          name: code-coverage
+          path: out/neodisambiguate/scoverage/htmlReport.dest/
