--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -13,6 +13,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
         with:
+          distribution: temurin
           java-version: ${{ matrix.java-version }}
       - name: Cache for Scala Dependencies
         uses: actions/cache@v4
