--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -8,14 +8,15 @@ jobs:
     strategy:
       matrix:
         suite: [ neodisambiguate ]
-        java-version: [ 1.8, 11, 17, 21 ]
+        java-version: [ 8, 11, 17, 21 ]
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-java@v1
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
         with:
+          distribution: 'temurin'
           java-version: ${{ matrix.java-version }}
       - name: Cache for Scala Dependencies
-        uses: actions/cache@v2
+        uses: actions/cache@v4
         with:
           path: |
             ~/.mill/download
@@ -33,5 +34,10 @@ jobs:
       - name: Create Code Coverage Report
         if: matrix.java-version == '11'
         run: |
-          ./mill --no-server --disable-ticker ${{ matrix.suite }}.scoverage.xmlReport
-      # TODO: build an HTML report and upload as an artifact
+          ./mill --no-server --disable-ticker ${{ matrix.suite }}.scoverage.htmlReport
+      - name: Upload Code Coverage Report
+        uses: actions/upload-artifact@v4
+        if: matrix.java-version == '11'
+        with:
+          name: code-coverage
+          path: out/neodisambiguate/scoverage/htmlReport.dest/
